crates/hwp-core/tests/snapshots/snapshot_tests__lists_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
assertion_line: 622
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http_quiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.ps0 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps1 {
  text-align:justify;padding-left:14.11mm;margin-bottom:0.56mm;
}
.ps2 {
  text-align:justify;padding-left:21.17mm;margin-bottom:0.56mm;
}
.ps3 {
  text-align:justify;padding-left:28.22mm;margin-bottom:0.56mm;
}
.ps4 {
  text-align:justify;padding-left:35.28mm;margin-bottom:0.56mm;
}
.ps5 {
  text-align:justify;padding-left:42.33mm;margin-bottom:0.56mm;
}
.ps6 {
  text-align:justify;padding-left:49.39mm;margin-bottom:0.56mm;
}
.ps7 {
  text-align:justify;padding-left:10.58mm;margin-bottom:0.56mm;
}
.ps8 {
  text-align:justify;margin-bottom:0.53mm;line-height:0.02;
}
.ps9 {
  text-align:justify;padding-left:7.06mm;margin-bottom:0.56mm;
}
.ps10 {
  text-align:justify;text-indent:-9.24mm;margin-bottom:0.46mm;line-height:0.01;
}
.ps11 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps12 {
  text-align:justify;margin-bottom:0.56mm;line-height:655.36;
}
.ps13 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps14 {
  text-align:justify;margin-bottom:0.56mm;line-height:1310.72;
}
.ps15 {
  text-align:justify;margin-bottom:0.56mm;line-height:655.36;
}
.ps16 {
  text-align:justify;margin-bottom:0.56mm;line-height:655.36;
}
.ps17 {
  text-align:justify;margin-bottom:0.56mm;line-height:655.36;
}
.ps18 {
  text-align:justify;margin-bottom:0.56mm;line-height:1966.08;
}
.ps19 {
  text-align:justify;margin-bottom:0.56mm;line-height:1966.08;
}
.ps20 {
  text-align:justify;margin-bottom:0.56mm;line-height:1966.08;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">글머리표</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:11.29mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps12" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:16.93mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:22.58mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:28.22mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">글머리표 두 번째</span></div><div class="hls ps14" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:33.87mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps14" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:39.51mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps14" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:45.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:50.80mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:56.44mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">문단번호</span></div><div class="hls ps18" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:62.09mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps18" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:67.73mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps19" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:73.38mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2-1</span></div><div class="hls ps18" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:79.02mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps19" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:84.67mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-1</span></div><div class="hls ps19" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:90.31mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2</span></div><div class="hls ps20" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:95.96mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-1</span></div><div class="hls ps20" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:101.60mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-2</span></div><div class="hls ps20" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:107.24mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-3</span></div><div class="hls ps18" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:112.89mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">4</span></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:118.53mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps11" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:124.18mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">문단번호 두 번째 (번호 이어짐)</span></div><div class="hls ps18" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:129.82mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">5</span></div><div class="hls ps19" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:135.47mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">5-1</span></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:141.11mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:146.76mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">문단번호 세 번째 (새 번호)</span></div><div class="hls ps15" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:152.40mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps15" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:158.04mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps16" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:163.69mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2-1</span></div><div class="hls ps15" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:169.33mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps16" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:174.98mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-1</span></div><div class="hls ps16" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:180.62mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2</span></div><div class="hls ps17" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:186.27mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-1</span></div><div class="hls ps17" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:191.91mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-2</span></div><div class="hls ps17" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:197.56mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-3</span></div><div class="hls ps15" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:203.20mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">4</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.00mm;white-space:nowrap;left:0.00mm;top:-0.26mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">개요</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:5.38mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:11.02mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:16.67mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2-1</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:22.31mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:27.96mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-1</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:33.60mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:39.25mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-1</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:44.89mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-2</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:50.54mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-3</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:56.18mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">4</span></div><div class="hls ps0" style="line-height:3.00mm;white-space:nowrap;left:0.00mm;top:61.82mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:3.00mm;white-space:nowrap;left:0.00mm;top:67.47mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">개요 두 번째 (번호 이어짐)</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:73.11mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">5</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:78.76mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">5-1</span></div><div class="hls ps0" style="line-height:3.00mm;white-space:nowrap;left:0.00mm;top:84.40mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps0" style="line-height:3.00mm;white-space:nowrap;left:0.00mm;top:90.05mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">개요 세 번째 (새 번호)</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:-0.26mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">1</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:5.38mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:11.02mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">2-1</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:16.67mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:22.31mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-1</span></div><div class="hls ps1" style="line-height:3.00mm;white-space:nowrap;left:7.06mm;top:27.96mm;height:3.53mm;width:142.95mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:33.60mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-1</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:39.25mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-2</span></div><div class="hls ps2" style="line-height:3.00mm;white-space:nowrap;left:10.58mm;top:44.89mm;height:3.53mm;width:139.42mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">3-2-3</span></div><div class="hls ps9" style="line-height:3.00mm;white-space:nowrap;left:3.53mm;top:50.54mm;height:3.53mm;width:146.47mm;"><span class="hrt cs1" style="font-size:10pt;color:rgb(0,0,0);">4</span></div></div></div></div></body>

</html>
