crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_in_common_controls_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07




<table border="1" cellpadding="5" cellspacing="0" style="border-collapse: collapse;">
  <tr>
    <td>다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 </td>
  </tr>
</table>
  
표  
다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단

그림  
그림
